// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox allows setting props on label 1`] = `
<label
  aria-label="custom label"
  className="sc-hKMtZM gNqItn"
>
  <input
    className="sc-eCYdqJ gpoUA"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox handles disabled state 1`] = `
<label
  className="sc-hKMtZM uiIZG"
>
  <input
    className="sc-eCYdqJ fBIvaF"
    disabled={true}
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox handles options 1`] = `
<label
  className="sc-hKMtZM gNqItn"
>
  <input
    className="sc-eCYdqJ gpoUA"
    type="checkbox"
  />
  Click Me
</label>
`;

exports[`Checkbox matches snapshot 1`] = `
<label
  className="sc-hKMtZM dHABFU"
>
  <input
    className="sc-eCYdqJ glqLW"
    type="checkbox"
  />
  Click Me
</label>
`;
